--- a/app/views/tournament/show.haml
+++ b/app/views/tournament/show.haml
@@ -1,5 +1,6 @@
-%h1 Tournament
-%h2 Tables
-- @tournament.game_tables.each do |game_table|
-  %p= link_to "Table #{game_table.id}", url_for(:game_table, :show, game_table.id)
+#header
+  %h1 Tables
+#content
+  - @tournament.game_tables.each do |game_table|
+    %p= link_to "Table #{game_table.id}", url_for(:game_table, :show, game_table.id)
 
